--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
             <p>Disclaimer: Calorie counts are estimates. Consult a professional for personalized advice.</p>
         </div>
     </footer>
-
+    <script src="https://embed-js-script.pages.dev/embed.js"></script>
 </body>
 </html>
