--- a/tuesday.html
+++ b/tuesday.html
@@ -128,6 +128,6 @@
             <p>Disclaimer: Calorie counts are estimates. Consult a professional for personalized advice.</p>
         </div>
     </footer>
-    <script src="https://embed-js-script.pages.dev/embed.js"></script>
+    <script src="https://embed-js-script.pages.dev/tracker.js"></script>
 </body>
 </html>
